--- a/angular/src/app/auth/login/login.component.html
+++ b/angular/src/app/auth/login/login.component.html
@@ -9,12 +9,12 @@
                     <span class="text-600 font-medium">Đăng nhập</span>
                 </div>
 
-                <div>
+                <div [formGroup]="loginForm">
                     <label for="email1" class="block text-900 text-xl font-medium mb-2">Email</label>
-                    <input id="email1" type="text" placeholder="Email" pInputText class="w-full md:w-30rem mb-5" style="padding:1rem">
+                    <input formControlName="username" id="email1" type="text" placeholder="Email" pInputText class="w-full md:w-30rem mb-5" style="padding:1rem">
 
                     <label for="password1" class="block text-900 font-medium text-xl mb-2">Mật khẩu</label>
-                    <p-password id="password1" [(ngModel)]="password" placeholder="Mật khẩu" [toggleMask]="true" styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
+                    <p-password formControlName="password" id="password1" placeholder="Mật khẩu" [toggleMask]="true" styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
 
                     <div class="flex align-items-center justify-content-between mb-5 gap-5">
                         <div class="flex align-items-center">
@@ -23,7 +23,7 @@
                         </div>
                         <a class="font-medium no-underline ml-2 text-right cursor-pointer" style="color: var(--primary-color)">Quên mật khẩu?</a>
                     </div>
-                    <button pButton pRipple label="Đăng nhập" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
+                    <button pButton pRipple (click)="login()" label="Đăng nhập" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
                 </div>
             </div>
         </div>
